refactor inno-radio

--- a/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
+++ b/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
@@ -26,329 +26,16 @@ $border-size: 1.5px;
   outline-width: 0;
 }
 
-// input {
-//   border: 0;
-//   clip: rect(0 0 0 0);
-//   height: 1px;
-//   margin: -1px;
-//   overflow: hidden;
-//   padding: 0;
-//   position: absolute;
-//   width: 1px;
-// }
-
-input:checked ~ .checkbox {
-  border: 1px solid yellowgreen !important;
+input {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
-
-// .checkbox {
-//   width: $radio-size;
-//   height: $radio-size;
-//   border-radius: 50%;
-//   position: relative;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   cursor: pointer;
-
-//   &.focus {
-//     outline: $border-size solid colors.$focus-100;
-//     outline-offset: 2px;
-//   }
-
-//   &.light {
-//     background-color: colors.$primary-300;
-//     border: $border-size solid colors.$primary-200;
-//   }
-
-//   &.dark {
-//     background-color: colors.$primary-200;
-//     border: $border-size solid colors.$primary-300;
-//   }
-
-//   &:hover {
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$secondary-600;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$secondary-400;
-//     }
-//   }
-
-//   &:active {
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$secondary-600;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$secondary-400;
-//     }
-//   }
-
-//   &.error {
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$error-200;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$error-100;
-//     }
-//   }
-
-//   &.readonly {
-//     cursor: none;
-
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$secondary-400;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$secondary-300;
-//     }
-//   }
-
-//   &.disabled {
-//     cursor: none;
-
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$secondary-400;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$secondary-300;
-//     }
-//   }
-
-//   &.checked {
-//     &.light {
-//       background-color: colors.$primary-300;
-//       border: $border-size solid colors.$primary-200;
-//     }
-
-//     &.dark {
-//       background-color: colors.$primary-200;
-//       border: $border-size solid colors.$primary-100;
-//     }
-
-//     &:hover {
-//       &.light {
-//         background-color: colors.$primary-300;
-//         border: $border-size solid colors.$primary-200;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-200;
-//         border: $border-size solid colors.$primary-100;
-//       }
-//     }
-
-//     &.error {
-//       &.light {
-//         background-color: colors.$primary-200;
-//         border: $border-size solid colors.$primary-200;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-100;
-//         border: $border-size solid colors.$primary-100;
-//       }
-//     }
-
-//     &:active {
-//       &.light {
-//         background-color: colors.$primary-300;
-//         border: $border-size solid colors.$primary-200;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-200;
-//         border: $border-size solid colors.$primary-100;
-//       }
-//     }
-
-//     &.readonly {
-//       cursor: none;
-
-//       &.light {
-//         background-color: colors.$primary-300;
-//         border: $border-size solid colors.$primary-300;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-200;
-//         border: $border-size solid colors.$primary-200;
-//       }
-//     }
-
-//     &.disabled {
-//       cursor: none;
-
-//       &.light {
-//         background-color: colors.$secondary-200;
-//         border: $border-size solid colors.$secondary-200;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-200;
-//         border: $border-size solid colors.$secondary-400;
-//       }
-//     }
-//   }
-// }
-
-// input:checked {
-//   & ~ .checksign {
-//     @include checkmark-base;
-
-//     display: inline-block;
-//     visibility: hidden;
-
-//     &.checked {
-//       visibility: visible;
-
-//       &.light {
-//         background-color: colors.$primary-200;
-//       }
-
-//       &.dark {
-//         background-color: colors.$primary-100;
-//       }
-
-//       &:hover {
-//         &.light {
-//           background-color: colors.$primary-200;
-//         }
-
-//         &.dark {
-//           background-color: colors.$primary-100;
-//         }
-//       }
-
-//       &:active {
-//         &.light {
-//           background-color: colors.$primary-200;
-//         }
-
-//         &.dark {
-//           background-color: colors.$primary-100;
-//         }
-//       }
-
-//       &.readonly {
-//         cursor: none;
-
-//         &.light {
-//           background-color: colors.$primary-200;
-//         }
-
-//         &.dark {
-//           background-color: colors.$primary-300;
-//         }
-//       }
-
-//       &.error {
-//         &.light {
-//           background-color: colors.$primary-300;
-//         }
-
-//         &.dark {
-//           background-color: colors.$primary-200;
-//         }
-//       }
-
-//       &.disabled {
-//         cursor: none;
-
-//         &.light {
-//           background-color: colors.$secondary-400;
-//         }
-
-//         &.dark {
-//           background-color: colors.$secondary-400;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .label {
-//   font-size: 16px;
-//   cursor: pointer;
-//   margin-left: 12px;
-
-//   &.light {
-//     color: colors.$primary-200;
-//   }
-
-//   &.dark {
-//     color: colors.$primary-300;
-//   }
-
-//   &.required {
-//     &::after {
-//       content: '*';
-//     }
-//   }
-
-//   &.error {
-//     &.light {
-//       color: colors.$error-200;
-//     }
-
-//     &.dark {
-//       color: colors.$error-100;
-//     }
-//   }
-
-//   &.readonly {
-//     cursor: none;
-
-//     &.light {
-//       color: colors.$secondary-400;
-//     }
-
-//     &.dark {
-//       color: colors.$secondary-400;
-//     }
-//   }
-
-//   &.disabled {
-//     cursor: none;
-
-//     &.light {
-//       color: colors.$secondary-400;
-//     }
-
-//     &.dark {
-//       color: colors.$secondary-400;
-//     }
-//   }
-
-//   &.checked {
-//     &.error {
-//       &.light {
-//         color: colors.$primary-200;
-//       }
-
-//       &.dark {
-//         color: colors.$primary-300;
-//       }
-//     }
-//   }
-// }
-
-/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .checkbox {
   width: $radio-size;
