--- a/packages/test-applications/angular-test-app/src/app/app.component.html
+++ b/packages/test-applications/angular-test-app/src/app/app.component.html
@@ -29,6 +29,8 @@
         formControlName="checkboxtest1"
         label="checkbox label"
         indeterminate="true"
+        required
+        error="checkboxValid()"
       ></inno-checkbox>
     </div>
     <div>
