--- a/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
@@ -13,6 +13,7 @@
   align-items: center;
   background-color: transparent;
   overflow: hidden;
+  font-size:12px;
 
   inno-icon {
     padding-top: 2px;
