--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -113,7 +113,7 @@ $border-size: 1px;
   }
 
   &.readonly {
-    cursor: none;
+    cursor: default;
 
     &.light {
       background-color: colors.$primary-300;
@@ -127,7 +127,7 @@ $border-size: 1px;
   }
 
   &.disabled {
-    cursor: none;
+    cursor: default;
 
     &.light {
       background-color: colors.$secondary-200;
@@ -188,7 +188,7 @@ $border-size: 1px;
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$primary-300;
@@ -202,7 +202,7 @@ $border-size: 1px;
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$secondary-200;
@@ -264,7 +264,7 @@ $border-size: 1px;
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$primary-300;
@@ -278,7 +278,7 @@ $border-size: 1px;
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$secondary-200;
@@ -335,7 +335,7 @@ $border-size: 1px;
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         border-bottom-color: colors.$primary-200;
@@ -361,7 +361,7 @@ $border-size: 1px;
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         border-bottom-color: colors.$secondary-400;
@@ -412,7 +412,7 @@ $border-size: 1px;
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$primary-200;
@@ -434,7 +434,7 @@ $border-size: 1px;
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$secondary-400;
@@ -477,7 +477,7 @@ $border-size: 1px;
   }
 
   &.readonly {
-    cursor: none;
+    cursor: default;
 
     &.light {
       color: colors.$primary-200;
@@ -489,7 +489,7 @@ $border-size: 1px;
   }
 
   &.disabled {
-    cursor: none;
+    cursor: default;
 
     &.light {
       color: colors.$secondary-400;
