--- a/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
+++ b/packages/stencil-lib/src/components/inno-radio/inno-radio.scss
@@ -99,7 +99,7 @@ input {
   }
 
   &.readonly {
-    cursor: none;
+    cursor: default;
 
     &.light {
       background-color: colors.$primary-300;
@@ -113,7 +113,7 @@ input {
   }
 
   &.disabled {
-    cursor: none;
+    cursor: default;
 
     &.light {
       background-color: colors.$primary-300;
@@ -174,7 +174,7 @@ input {
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$primary-300;
@@ -188,7 +188,7 @@ input {
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$secondary-200;
@@ -241,7 +241,7 @@ input {
     }
 
     &.readonly {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$primary-200;
@@ -263,7 +263,7 @@ input {
     }
 
     &.disabled {
-      cursor: none;
+      cursor: default;
 
       &.light {
         background-color: colors.$secondary-400;
@@ -306,7 +306,7 @@ input {
   }
 
   &.readonly {
-    cursor: none;
+    cursor: default;
 
     &.light {
       color: colors.$secondary-400;
@@ -318,7 +318,7 @@ input {
   }
 
   &.disabled {
-    cursor: none;
+    cursor: default;
 
     &.light {
       color: colors.$secondary-400;
