--- a/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
+++ b/packages/stencil-lib/src/components/inno-tab-item/inno-tab-item.scss
@@ -1,46 +1,10 @@
 @use '@innomotics/ix/styles/colors';
+@use '../../../styles/siemens-ix/scrollbar.scss' as ixscrollbar;
 
 $bar-active-height: 8px;
 
-@mixin scrollbar() {
-  ::-webkit-scrollbar-button {
-    display: none;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    width: 0.5rem;
-    height: 0.5rem;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    border-radius: 5px;
-    background: #eff0f1;
-  }
-
-  ::-webkit-scrollbar-track:hover {
-    background: #e2e4e6;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background: #cfd2d5;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #c2c6ca;
-  }
-
-  ::-webkit-scrollbar-corner {
-    display: none;
-  }
-}
-
 :host {
-  @include scrollbar();
+  @include ixscrollbar.scrollbar();
 
   *,
   *::after,
@@ -61,20 +25,36 @@ $bar-active-height: 8px;
   font-size: 16px;
   font-weight: bold;
 
-  background-color: colors.$primary-200;
-  color: colors.$secondary-300;
   font-family: 'InnomoticsHafferSQ-Bold';
 
-  ::after {
+  &::after {
     content: '';
     width: 100%;
     height: 1px;
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: colors.$primary-300;
-    opacity: 0.4;
     transition: height 300ms cubic-bezier(0.84, 0, 0.58, 1);
+  }
+
+  &.light {
+    background-color: colors.$primary-300;
+    color: colors.$secondary-800;
+
+    &::after {
+      opacity: 0.2;
+      background-color: colors.$primary-200;
+    }
+  }
+
+  &.dark {
+    background-color: colors.$primary-200;
+    color: colors.$secondary-300;
+
+    &::after {
+      opacity: 0.4;
+      background-color: colors.$secondary-300;
+    }
   }
 
   .text {
@@ -108,46 +88,107 @@ $bar-active-height: 8px;
 }
 
 :host(:hover) {
-  background-color: colors.$primary-200;
-  color: colors.$secondary-300;
   cursor: pointer;
 
-  ::after {
+  &::after {
     height: $bar-active-height;
-    opacity: 1;
-    background-color: colors.$secondary-300;
+  }
+
+  &.light {
+    color: colors.$secondary-800;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$secondary-800;
+    }
+  }
+
+  &.dark {
+    color: colors.$secondary-300;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$secondary-300;
+    }
   }
 }
 
 :host(:active) {
-  background-color: colors.$primary-200;
-  color: colors.$primary-100;
-
-  ::after {
+  &::after {
     height: $bar-active-height;
-    opacity: 1;
-    background-color: colors.$primary-100;
+  }
+
+  &.light {
+    background-color: colors.$primary-300;
+    color: colors.$primary-200;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$primary-200;
+    }
+  }
+
+  &.dark {
+    background-color: colors.$primary-200;
+    color: colors.$primary-100;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$primary-100;
+    }
   }
 }
 
 :host(.disabled) {
   pointer-events: none;
-  color: colors.$secondary-800;
-  background-color: colors.$primary-200;
 
-  ::after {
-    opacity: 1;
-    background-color: colors.$secondary-800;
+  &::after {
+    height: 0px;
+  }
+
+  &.light {
+    background-color: colors.$primary-300;
+    color: colors.$secondary-800;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$secondary-800;
+    }
+  }
+
+  &.dark {
+    background-color: colors.$primary-200;
+    color: colors.$secondary-800;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$secondary-800;
+    }
   }
 }
 
 :host(.selected:not(.disabled)) {
-  background-color: colors.$primary-200;
-  color: colors.$primary-100;
-
-  ::after {
+  &::after {
     height: $bar-active-height;
-    opacity: 1;
-    background-color: colors.$primary-100;
+  }
+
+  &.light {
+    background-color: colors.$primary-300;
+    color: colors.$primary-200;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$primary-200;
+    }
+  }
+
+  &.dark {
+    background-color: colors.$primary-200;
+    color: colors.$primary-100;
+
+    &::after {
+      opacity: 1;
+      background-color: colors.$primary-100;
+    }
   }
 }
