--- a/packages/stencil-lib/src/components/inno-loader/inno-loader.scss
+++ b/packages/stencil-lib/src/components/inno-loader/inno-loader.scss
@@ -2,23 +2,43 @@
 
 :host {
   position: relative;
-  display:block;
+  display: block;
 
-  &::before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width:calc(100% - 10px);
-    height:calc(100% - 10px);
-    transform: translate3d(-50%, -50%, 0);
-    transform-origin: left top;
-    border-top: 6px solid rgba(colors.$additional-light-400, 0);
-    border-right: 6px solid rgba(colors.$additional-light-400, .7);
-    border-bottom: 6px solid rgba(colors.$additional-light-400, .7);
-    border-left: 6px solid rgba(colors.$additional-light-400, .7);
-    border-radius: 50%;
-    content: '';
-    animation: rotate-spinner 1s infinite linear;
+  &.light {
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: calc(100% - 10px);
+      height: calc(100% - 10px);
+      transform: translate3d(-50%, -50%, 0);
+      transform-origin: left top;
+      border-top: 6px solid rgba(colors.$additional-light-400, 0);
+      border-right: 6px solid rgba(colors.$additional-light-400, 0.7);
+      border-bottom: 6px solid rgba(colors.$additional-light-400, 0.7);
+      border-left: 6px solid rgba(colors.$additional-light-400, 0.7);
+      border-radius: 50%;
+      content: '';
+      animation: rotate-spinner 1s infinite linear;
+    }
+  }
+  &.dark {
+    &::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: calc(100% - 10px);
+      height: calc(100% - 10px);
+      transform: translate3d(-50%, -50%, 0);
+      transform-origin: left top;
+      border-top: 6px solid rgba(colors.$additional-dark-400, 0);
+      border-right: 6px solid rgba(colors.$additional-dark-400, 0.7);
+      border-bottom: 6px solid rgba(colors.$additional-dark-400, 0.7);
+      border-left: 6px solid rgba(colors.$additional-dark-400, 0.7);
+      border-radius: 50%;
+      content: '';
+      animation: rotate-spinner 1s infinite linear;
+    }
   }
 
   @keyframes rotate-spinner {
