--- a/packages/test-applications/react-test-app/src/index.css
+++ b/packages/test-applications/react-test-app/src/index.css
@@ -1,6 +1,6 @@
 @import "@innomotics/ix/styles/innomotics.scss";
 
-:root {
+/* :root {
   font-family: 'InnomoticsHafferSQ';
   line-height: 1.5;
   font-weight: 300;
@@ -13,7 +13,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 a {
   font-weight: 500;
@@ -24,13 +24,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-}
+} */
 
 h1 {
   font-size: 3.2em;
