--- a/packages/stencil-lib/src/components/inno-modal-footer/inno-modal-footer.scss
+++ b/packages/stencil-lib/src/components/inno-modal-footer/inno-modal-footer.scss
@@ -1,11 +1,21 @@
-@import '../../../styles/siemens-ix/shadow-dom/component';
+@use '../../../styles/siemens-ix/shadow-dom/component' as component;
+@use '../../../styles/breakpoints' as breakpoints;
 
 :host {
-  @include inno-component;
+  @include component.inno-component;
+
   display: flex;
-  padding: 0.5rem;
   justify-content: flex-end;
   align-items: center;
-  gap: 0.5rem;
   align-self: stretch;
+  gap: 16px;
+  margin: 24px 32px 24px 32px;
+}
+
+@media screen and (max-width: breakpoints.$desktop) {
+  :host {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
