--- a/packages/stencil-lib/src/components/inno-modal-header/inno-modal-header.scss
+++ b/packages/stencil-lib/src/components/inno-modal-header/inno-modal-header.scss
@@ -1,27 +1,26 @@
-@use '../../../styles//siemens-ix/shadow-dom/component';
-@use '@innomotics/ix/styles/colors';
+@use '@innomotics/ix/styles/colors' as colors;
+@use '../../../styles//siemens-ix/shadow-dom/component' as component;
 
 :host {
   @include component.inno-component;
+
   display: flex;
   align-items: center;
   align-self: stretch;
-  padding: 32px;
+  margin: 32px 32px 16px 32px;
 
   font-size: 24px;
   line-height: 32px;
+  font-family: 'InnomoticsHafferSQ';
+  font-weight: bold;
   text-overflow: ellipsis;
-  font-family: 'InnomoticsHafferSQ-Bold';
-  line-clamp: 2;
-  -webkit-line-clamp: 2;
-  max-height: 125px;
 
   .modal-close {
-    cursor: pointer;
+    align-self: flex-start;
     margin-left: auto;
     background-color: transparent;
-    color: white;
-    align-self: flex-start;
+    color: colors.$primary-300;
+    cursor: pointer;
 
     &:hover {
       color: colors.$secondary-400;
@@ -29,8 +28,8 @@
   }
 
   .modal-icon {
-    color: white;
     margin-right: 1rem;
+    color: colors.$primary-300;
   }
 
   &.light {
