add inno-modal react

--- a/packages/stencil-lib/src/components/inno-modal-content/inno-modal-content.scss
+++ b/packages/stencil-lib/src/components/inno-modal-content/inno-modal-content.scss
@@ -7,10 +7,9 @@
   display: block;
   position: relative;
   overflow: auto;
-  margin: 8px 32px 16px 32px;
 
-  font-size: 16px;
-  line-height: 24px;
-  font-family: 'InnomoticsHafferSQ';
-  color: colors.$primary-300;
+  // font-size: 16px;
+  // line-height: 24px;
+  // font-family: 'InnomoticsHafferSQ';
+  // color: colors.$primary-300;
 }
