--- a/packages/test-applications/angular-test-app/src/styles.scss
+++ b/packages/test-applications/angular-test-app/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-:root{
-    font-family: 'InnomoticsHafferSQ';
+:root {
+  font-family: "InnomoticsHafferSQ";
+}
+
+html,
+body {
+  height: 100%;
 }
