--- a/packages/stencil-lib/src/components/inno-modal-footer/inno-modal-footer.scss
+++ b/packages/stencil-lib/src/components/inno-modal-footer/inno-modal-footer.scss
@@ -4,18 +4,14 @@
 :host {
   @include component.inno-component;
 
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  display: block;
   align-self: stretch;
-  gap: 16px;
-  margin: 24px 32px 24px 32px;
 }
 
-@media screen and (max-width: breakpoints.$desktop) {
-  :host {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
+// @media screen and (max-width: breakpoints.$desktop) {
+//   :host {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//   }
+// }
