--- a/packages/test-applications/angular-test-app/src/app/components/modal-example/modal-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/modal-example/modal-example.component.html
@@ -246,3 +246,10 @@
     </inno-modal-footer>
   </inno-modal>
 </ng-template>
+
+<inno-button
+  variant="secondary"
+  (click)="openModalByInstance()"
+  color-variant="dark"
+  >Open modal by instance</inno-button
+>
