--- a/packages/test-applications/angular-test-app/src/app/app.component.html
+++ b/packages/test-applications/angular-test-app/src/app/app.component.html
@@ -96,3 +96,7 @@
   <div *ngIf="activeTabIndex === 1">Tab 2 active</div>
   <div *ngIf="activeTabIndex === 2">Tab 3 active</div>
 </div>
+
+<div>
+  <inno-button (click)="showToast()">show toast</inno-button>
+</div>
