--- a/packages/stencil-lib/src/components/inno-status-message/inno-status-message-container.scss
+++ b/packages/stencil-lib/src/components/inno-status-message/inno-status-message-container.scss
@@ -1,10 +1,6 @@
-:host {
-  // @include ix-component;
-}
-
 #status-message-container {
   > :not(:last-child) {
-    margin-block-end: 0.25rem;
+    margin-block-end: 1rem;
   }
 }
 
@@ -21,4 +17,14 @@
 .status-message-container--bottom-right {
   right: 1rem;
   bottom: 2rem;
+}
+
+.status-message-container--bottom-left {
+  left: 1rem;
+  bottom: 2rem;
+}
+
+.status-message-container--top-left {
+  left: 1rem;
+  top: 2rem;
 }
