--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -7,3 +7,4 @@
 
 @import './components/inno-checkbox';
 @import './components/inno-radiobutton';
+@import '../src//components/inno-status-message/inno-status-message-container.scss';
