--- a/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
+++ b/packages/test-applications/angular-test-app/src/app/components/general-example/general-example.component.html
@@ -6,3 +6,7 @@
   <inno-breadcrumb-item label="One">yeee</inno-breadcrumb-item>
   <inno-breadcrumb-item label="two"></inno-breadcrumb-item>
 </inno-breadcrumb>
+
+<div>
+  <inno-button (click)="showStatusMessage()">show toast</inno-button>
+</div>
