--- a/packages/stencil-lib/src/components/inno-paginator/inno-paginator.scss
+++ b/packages/stencil-lib/src/components/inno-paginator/inno-paginator.scss
@@ -22,6 +22,7 @@
     justify-content: center;
     align-items: center;
     cursor:pointer;
+    color:colors.$interaction-light-default;
     
     &.dark{
       color: colors.$interaction-dark-default;
