Fixed css import issue.

--- a/packages/stencil-lib/styles/innomotics.scss
+++ b/packages/stencil-lib/styles/innomotics.scss
@@ -7,5 +7,5 @@
 
 @import './components/inno-checkbox';
 @import './components/inno-radiobutton';
-@import '../src/components/inno-status-message-container/inno-status-message-container.scss';
 @import './components/inno-pane';
+@import './components/inno-status-message-container';
