--- a/packages/stencil-lib/src/components/inno-status-message-container/inno-status-message-container.scss
+++ b/packages/stencil-lib/src/components/inno-status-message-container/inno-status-message-container.scss
@@ -1,32 +1,1 @@
-#status-message-container {
-  z-index: 1000;
-
-  > :not(:last-child) {
-    margin-block-end: 1rem;
-  }
-}
-
-.status-message-container {
-  display: block;
-  position: fixed;
-}
-
-.status-message-container--top-right {
-  right: 1rem;
-  top: 2rem;
-}
-
-.status-message-container--bottom-right {
-  right: 1rem;
-  bottom: 2rem;
-}
-
-.status-message-container--bottom-left {
-  left: 1rem;
-  bottom: 2rem;
-}
-
-.status-message-container--top-left {
-  left: 1rem;
-  top: 2rem;
-}
+@use '@innomotics/brand-experience/styles/components/inno-status-message-container';
